--- a/partials/ConnectSale.html
+++ b/partials/ConnectSale.html
@@ -12,7 +12,7 @@
                                     <div class="col-lg-12">
                                         <div class="row">
                                             <div class="col-lg-8">
-                                                <button class="btn btn-primary" data-toggle="modal" data-target="#joingroup">
+                                                <button class="btn sas-bk" data-toggle="modal" data-target="#joingroup">
                                                     <i class="material-icons">border_color</i> Chọn Group Telesale
                                                 </button>
                                             </div>
@@ -110,7 +110,7 @@
                                     </div>
                                 </div>
 
-                                <button type="button" class="btn btn-lg btn-primary btn-block" ng-click="Join()">
+                                <button type="button" class="btn btn-lg sas-bk btn-block" ng-click="Join()">
                                     <i class="material-icons">send</i> Liên Kết</button>
                             </form>
                         </div>
@@ -166,7 +166,7 @@
                                 </div>
                         </div>
 
-                        <button type="button" class="btn btn-lg btn-primary btn-block" ng-click="UpdatejoinGroup()">
+                        <button type="button" class="btn btn-lg sas-bk btn-block" ng-click="UpdatejoinGroup()">
                             <i class="material-icons">send</i> Cập nhật</button>
                         </form>
                     </div>
@@ -192,7 +192,7 @@
                     <b style="text-decoration: underline;">{{_delsheet.id}}</b> khỏi liên kết group ?</p>
             </div>
             <div class="modal-footer" style="padding: 5px">
-                <button type="button" class="btn btn-primary" ng-click="Deljoin(_delsheet.name)">Chấp nhận</button>
+                <button type="button" class="btn sas-bk" ng-click="Deljoin(_delsheet.name)">Chấp nhận</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
             </div>
         </div>
