--- a/partials/managergroup.html
+++ b/partials/managergroup.html
@@ -12,7 +12,7 @@
                                     <div class="col-lg-12">
                                         <div class="row">
                                             <div class="col-lg-8">
-                                                <button class="btn btn-primary" data-toggle="modal" data-target="#group">
+                                                <button class="btn sas-bk" data-toggle="modal" data-target="#group">
                                                     <i class="material-icons">border_color</i> Tạo Group
                                                 </button>
                                             </div>
@@ -49,7 +49,7 @@
                                         </td>
                                         <td ng-if="content.Sheet === null"></td>
                                         <td class="td-actions text-center">
-                                            <button type="button" rel="tooltip" class="btn btn-success" ng-click="OpeneditGroup(content)">
+                                            <button type="button" rel="tooltip" class="btn sas-bk" ng-click="OpeneditGroup(content)">
                                                 <i class="material-icons">edit</i>
                                             </button>
 
@@ -119,7 +119,7 @@
                                     </div>
                                 </div>
 
-                                <button type="button" class="btn btn-lg btn-primary btn-block" ng-click="createGroup()">
+                                <button type="button" class="btn btn-lg sas-bk btn-block" ng-click="createGroup()">
                                     <i class="material-icons">send</i> Tạo Group</button>
                             </form>
                         </div>
@@ -210,7 +210,7 @@
                                 </div>
                         </div>
 
-                        <button type="button" class="btn btn-lg btn-primary btn-block" ng-click="UpdateGroup()">
+                        <button type="button" class="btn btn-lg sas-bk btn-block" ng-click="UpdateGroup()">
                             <i class="material-icons">send</i> Cập nhật</button>
                         </form>
                     </div>
@@ -236,7 +236,7 @@
                     <b style="text-decoration: underline;">{{delg._id}}</b> khỏi cơ sở dữ liệu của hệ thống ?</p>
             </div>
             <div class="modal-footer" style="padding: 5px">
-                <button type="button" class="btn btn-primary" ng-click="Delg(delg._id)">Chấp nhận</button>
+                <button type="button" class="btn sas-bk" ng-click="Delg(delg._id)">Chấp nhận</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
             </div>
         </div>
