--- a/templates/loading.html
+++ b/templates/loading.html
@@ -1,8 +1,15 @@
-<div id="loading">
-    <ul class="bokeh">
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-    <h4 class="text-center top-10">Please wait ...</h4>
+<!-- <div id="loading"> -->
+    <!-- <ul class="bokeh"> -->
+        <!-- <li></li> -->
+        <!-- <li></li> -->
+        <!-- <li></li> -->
+    <!-- </ul> -->
+    <!-- <h4 class="text-center top-10">Please wait ...</h4> -->
+<!-- </div> -->
+
+<div class="spinner">
+  <h4 class="text-center">Loading data please wait</h4>
+  <div class="bounce1"></div>
+  <div class="bounce2"></div>
+  <div class="bounce3"></div>
 </div>
