--- a/partials/home.html
+++ b/partials/home.html
@@ -8,7 +8,7 @@
 
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="row">
+                                    <div class="row" style="margin-bottom: 40px">
                                         <div class="col-lg-8">
                                             <div class="row">
                                                 <div class="col-lg-6">
@@ -40,6 +40,18 @@
                                                     </div>
                                                 </div>
                                             </div>
+											<div class="row">
+									
+                                                <div class="col-lg-12">
+                                                   <div class="input-group">
+														<!-- <div class="input-group-prepend add"> -->
+															<!-- <label for="musername">Số Điện Thoại</label> -->
+														<!-- </div> -->
+														<input type="number" class="form-control" placeholder="Nhập số điện thoại" ng-model="crmphone">
+												   </div>
+                                                </div>
+										
+											</div>
                                         </div>
                                         <div class="col-lg-4">
                                             <div class="row top-10">
@@ -58,6 +70,18 @@
                                                     </a>
                                                 </div>
                                             </div>
+											
+											<div class="row top-10">
+												
+														<div class="col-lg-11">
+															<a href="#" class="btn btn-warning btn-block" style="margin-left: 20px"
+																ng-click="fillallCrm()">
+																<i class="material-icons">location_searching</i> Tìm Trên Toàn Hệ Thống
+															</a>
+															</div>
+												
+											</div>
+											
                                         </div>
                                     </div>
                                 </div>
@@ -182,7 +206,7 @@
                                     <div class="col-lg-4">
                                         <div class="form-group">
                                             <label for="note">Ghi chú</label>
-                                            <textarea class="form-control" rows="5" ng-model="_details.Note" id="dnote"></textarea>
+                                            <textarea ng-keyup="check_length_note()" class="form-control" rows="5" ng-model="_details.Note" id="dnote"></textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -231,15 +255,19 @@
                                     <div class="col-lg-2">
                                         <div class="form-group">
                                             <button class="btn btn-warning btn-block btn-lg btn-update" ng-show="auth.Role[0].id !== 0"
-                                                ng-disabled="_details.Status_student[0].id === 3 || auth.Username !== _details.Manager[0].id"
+                                                ng-disabled="_details.Status_student[0].id === 3 || auth.Username !== _details.Manager[0].id || auth.Access[0].capnhat === false"
                                                 ng-click="up_detail()">Cập Nhật
                                             </button>
                                             <button class="btn btn-warning btn-block btn-lg btn-update" ng-show="auth.Role[0].id === 0"
                                                 ng-disabled="_details.Status_student[0].id === 3" ng-click="up_detail()">Cập
                                                 Nhật
                                             </button>
-                                            <button class="btn sas-bk btn-block" ng-click="showsms(_details)">SMS</button>
-                                            <!-- <button class="btn btn-info btn-block">Email</button> -->
+											
+											<button class="btn sas-bk btn-block" ng-show="auth.Role[0].id !== 0" ng-disabled="auth.Access[0].sms === false" ng-click="showsms(_details)">SMS</button>
+                                            <button class="btn sas-bk btn-block" ng-show="auth.Role[0].id === 0" ng-click="showsms(_details)">SMS</button>
+											
+											<button class="btn btn-info btn-block" ng-show="auth.Role[0].id !== 0" ng-disabled="auth.Access[0].lichsuchinhsua === false" ng-click="open_history()">Lịch sử chỉnh sửa (<span ng-show="_details.EditHistory !== null">{{_details.EditHistory.length}}</span><span ng-show="_details.EditHistory === null">0</span>)</button>
+											<button class="btn btn-info btn-block" ng-show="auth.Role[0].id === 0" ng-click="open_history()">Lịch sử chỉnh sửa (<span ng-show="_details.EditHistory !== null">{{_details.EditHistory.length}}</span><span ng-show="_details.EditHistory === null">0</span>)</button>
                                         </div>
                                     </div>
                                 </div>
@@ -252,7 +280,7 @@
             <div class="modal-footer" style="border-top: none; padding-top: 0">
                 <div class="col-4">
                     <button type="button" class="btn btn-block btn-lg btn-primary" ng-show="auth.Role[0].id !== 0"
-                        ng-disabled="auth.Username !== _details.Manager[0].id" ng-click="addfriend(_details._id)">Thêm
+                        ng-disabled="auth.Username !== _details.Manager[0].id || auth.Access[0].themban === false" ng-click="addfriend(_details._id)">Thêm
                         bạn
                     </button>
                     <button type="button" class="btn btn-block btn-lg btn-primary" ng-show="auth.Role[0].id === 0"
@@ -261,18 +289,64 @@
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-block btn-lg btn-success" ng-show="auth.Role[0].id !== 0" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3"
+                    <button type="button" class="btn btn-block btn-lg btn-success" ng-show="auth.Role[0].id !== 0" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3 || auth.Access[0].goilaithoigian === false"
                         data-toggle="modal" data-target="#time">Gọi lại thời gian</button>
 
                     <button type="button" class="btn btn-block btn-lg btn-success" ng-show="auth.Role[0].id === 0"
                         data-toggle="modal" data-target="#time">Gọi lại thời gian</button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-block btn-lg btn-warning" ng-show="auth.Role[0].id !== 0" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3"
+                    <button type="button" class="btn btn-block btn-lg btn-warning" ng-show="auth.Role[0].id !== 0" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3 || auth.Access[0].goilaisau === false"
                         ng-click="recall()">Gọi lại sau</button>
                         <button type="button" class="btn btn-block btn-lg btn-warning" ng-show="auth.Role[0].id === 0"
                         ng-click="recall()">Gọi lại sau</button>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal lịch sử chỉnh sửa-->
+<div class="modal fade" id="history" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="exampleModalLabel">Lịch Sử Chỉnh Sửa</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form name="passform">
+                    <div class="row">
+                        <div class="col-12">
+                           <table cellpadding="0"
+                                class="table table-striped cell-border table-hover text-center">
+                                <thead>
+                                    <tr>
+                                        <th>STT</th>
+                                        <th>SĐT Cũ</th>
+                                        <th>SĐT Mới</th>
+                                        <th>Thời Gian</th>
+                                        <th>Username</th>
+                                        <th>Tên Nhân Viên</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="content in _details.EditHistory">
+                                        <td class="text-center">{{$index +1}}</td>
+                                        <td>{{content.Lastphone}}</td>
+                                        <td>{{content.Newphone}}</td>
+                                        <td>{{content.Daychange}}</td>
+                                        <td>{{content.Username}}</td>
+                                        <td>{{content.Fullname}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
@@ -354,7 +428,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="phone">Số DT</label>
-                                                <input type="number" class="form-control" ng-model="data.phone" id="phone"
+                                                <input type="number" class="form-control" ng-keyup="checkphone(data.phone)" ng-model="data.phone" id="phone"
                                                     required>
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">
@@ -498,7 +572,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="phone">Số DT</label>
-                                                <input type="number" class="form-control" ng-model="data.phone" id="phone2"
+                                                <input type="number" class="form-control" ng-keyup="checkphone(data.phone)" ng-model="data.phone" id="phone2"
                                                     required>
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">
