--- a/partials/home.html
+++ b/partials/home.html
@@ -45,9 +45,9 @@
                                                 <div class="col-lg-12">
                                                    <div class="input-group">
 														<!-- <div class="input-group-prepend add"> -->
-															<!-- <label for="musername">Số Điện Thoại</label> -->
+															<label for="musername">Số Điện Thoại</label>
 														<!-- </div> -->
-														<input type="number" class="form-control" placeholder="Nhập số điện thoại" ng-model="crmphone">
+														<input type="number" class="form-control" placeholder="0123456789" ng-model="crmphone">
 												   </div>
                                                 </div>
 										
