fix all sas final note

--- a/partials/home.html
+++ b/partials/home.html
@@ -43,7 +43,7 @@
 											<div class="row">
 									
                                                 <div class="col-lg-12">
-                                                   <div class="input-group">
+                                                   <div class="input-group add">
 														<!-- <div class="input-group-prepend add"> -->
 															<label for="musername">Số Điện Thoại</label>
 														<!-- </div> -->
