--- a/partials/home.html
+++ b/partials/home.html
@@ -8,7 +8,7 @@
 
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="row" style="margin-bottom: 40px">
+                                    <div class="row">
                                         <div class="col-lg-8">
                                             <div class="row">
                                                 <div class="col-lg-6">
