--- a/templates/leftmenu.html
+++ b/templates/leftmenu.html
@@ -75,7 +75,7 @@
                     <p>Thống kê</p>
                 </a>
             </li>
-            <li class="nav-item" ng-click="go_setup()" ng-if="auth.Role[0].id === 0 || auth.Leader === true" style="margin-bottom: 20px" ng-class="{'active': isactive === 9}">
+            <li class="nav-item" ng-click="go_setup()" style="margin-bottom: 20px" ng-class="{'active': isactive === 9}">
                 <a class="nav-link" href="">
                     <i class="material-icons">settings</i>
                     <p>Setup</p>
