--- a/partials/manageruser.html
+++ b/partials/manageruser.html
@@ -98,7 +98,7 @@ aria-hidden="true">
                         <div class="col-12">
                             <div class="input-group add">
 								<label for="_choose_role">Loại User</label>
-								<select id="_choose_role" class="form-control" ng-model="_choose_role" ng-change="changerole()"
+								<select id="_choose_role" class="form-control" ng-model="_choose_role" ng-change="changerole(_choose_role.id)"
 								ng-options="option.name for option in _role">
 								</select>
 							</div>
@@ -106,7 +106,7 @@ aria-hidden="true">
                         <div class="col-6">
                             <div class="form-check">
 								<label class="form-check-label">
-									<input id="thv" class="form-check-input" type="checkbox" value="1">Thêm Học Viên
+									<input id="thv" class="form-check-input" ng-checked="AccessChecked[0].themhocvien === true" type="checkbox" value="1">Thêm Học Viên
 									<span class="form-check-sign">
 										<span class="check"></span>
 									</span>
@@ -116,7 +116,7 @@ aria-hidden="true">
 						<div class="col-6">
                             <div class="form-check">
 								<label class="form-check-label">
-									<input id="cn" class="form-check-input" type="checkbox" value="1">Cập Nhật
+									<input id="cn" class="form-check-input" ng-checked="AccessChecked[0].capnhat === true" type="checkbox" value="1">Cập Nhật
 									<span class="form-check-sign">
 										<span class="check"></span>
 									</span>
@@ -126,7 +126,7 @@ aria-hidden="true">
 						<div class="col-6">
                             <div class="form-check">
 								<label class="form-check-label">
-									<input id="sms" class="form-check-input" type="checkbox" value="1">Gửi SMS
+									<input id="sms" class="form-check-input" ng-checked="AccessChecked[0].sms === true" type="checkbox" value="1">Gửi SMS
 									<span class="form-check-sign">
 										<span class="check"></span>
 									</span>
@@ -136,7 +136,7 @@ aria-hidden="true">
 						<div class="col-6">
                             <div class="form-check">
 								<label class="form-check-label">
-									<input id="gls" class="form-check-input" type="checkbox" value="1">Gọi Lại Sau
+									<input id="gls" class="form-check-input" ng-checked="AccessChecked[0].goilaisau === true" type="checkbox" value="1">Gọi Lại Sau
 									<span class="form-check-sign">
 										<span class="check"></span>
 									</span>
@@ -146,7 +146,7 @@ aria-hidden="true">
 						<div class="col-6">
                             <div class="form-check">
 								<label class="form-check-label">
-									<input id="gltg" class="form-check-input" type="checkbox" value="1">Gọi Lại Thời Gian
+									<input id="gltg" class="form-check-input" ng-checked="AccessChecked[0].goilaithoigian === true" type="checkbox" value="1">Gọi Lại Thời Gian
 									<span class="form-check-sign">
 										<span class="check"></span>
 									</span>
@@ -156,7 +156,7 @@ aria-hidden="true">
 						<div class="col-6">
                             <div class="form-check">
 								<label class="form-check-label">
-									<input id="tb" class="form-check-input" type="checkbox" value="1">Thêm Bạn
+									<input id="tb" class="form-check-input" ng-checked="AccessChecked[0].themban === true" type="checkbox" value="1">Thêm Bạn
 									<span class="form-check-sign">
 										<span class="check"></span>
 									</span>
@@ -166,7 +166,7 @@ aria-hidden="true">
 						<div class="col-6">
                             <div class="form-check">
 								<label class="form-check-label">
-									<input id="lscs" class="form-check-input" type="checkbox" value="1">Lịch Sử Chỉnh Sửa
+									<input id="lscs" class="form-check-input" ng-checked="AccessChecked[0].lichsuchinhsua === true" type="checkbox" value="1">Lịch Sử Chỉnh Sửa
 									<span class="form-check-sign">
 										<span class="check"></span>
 									</span>
@@ -176,7 +176,7 @@ aria-hidden="true">
 						<div class="col-6">
                             <div class="form-check">
 								<label class="form-check-label">
-									<input id="chv" class="form-check-input" type="checkbox" value="1"> Chuyển Học Viên
+									<input id="chv" class="form-check-input" ng-checked="AccessChecked[0].chuyenhocvien === true" type="checkbox" value="1"> Chuyển Học Viên
 									<span class="form-check-sign">
 										<span class="check"></span>
 									</span>
